syntax = "proto3";

package helloworld;

service Greeter {
    // Send a greeting
    rpc SayHello (HelloRequest) returns (HelloResponse) { }

    // Send another greeting
    rpc SayHelloAgain (HelloRequest) returns (HelloResponse) { }
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}